// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiles to Markdown 1`] = `
"remark-ping: expected configuration to be passed: {
  pingUsername: (username) => bool,
  userURL: (username) => string
}"
`;

exports[`fixture suite 0 compiles to Markdown: m0 1`] = `
"ping @Clem

ping @**FOO BAR**

no ping @quxjhdshqjkhfyhefezhjzjhdsjlfjlsqjdfjhsd

ping [@**I AM CLEM**](http://example.com)

@**baz baz**
"
`;

exports[`fixture suite 0 parses: f0 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "ping @Clem",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 3,
              "offset": 18,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 12,
            },
          },
          "type": "text",
          "value": "ping @",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 16,
                  "line": 3,
                  "offset": 27,
                },
                "indent": Array [],
                "start": Object {
                  "column": 9,
                  "line": 3,
                  "offset": 20,
                },
              },
              "type": "text",
              "value": "FOO BAR",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 18,
              "line": 3,
              "offset": 29,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 3,
              "offset": 18,
            },
          },
          "type": "strong",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 18,
          "line": 3,
          "offset": 29,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 12,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 50,
              "line": 5,
              "offset": 80,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 31,
            },
          },
          "type": "text",
          "value": "no ping @quxjhdshqjkhfyhefezhjzjhdsjlfjlsqjdfjhsd",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 50,
          "line": 5,
          "offset": 80,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 31,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 7,
              "offset": 87,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 82,
            },
          },
          "type": "text",
          "value": "ping ",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "@",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "I AM CLEM",
                    },
                  ],
                  "data": Object {
                    "hName": "span",
                    "hProperties": Object {
                      "class": "ping-username",
                    },
                  },
                  "type": "emphasis",
                },
              ],
              "data": Object {
                "hName": "a",
                "hProperties": Object {
                  "class": "ping ping-link",
                  "href": "/membres/voir/I AM CLEM/",
                  "rel": "nofollow",
                },
              },
              "position": Position {
                "end": Object {
                  "column": 21,
                  "line": 7,
                  "offset": 102,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 88,
                },
              },
              "type": "ping",
              "url": "/membres/voir/I AM CLEM/",
              "username": "I AM CLEM",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 42,
              "line": 7,
              "offset": 123,
            },
            "indent": Array [],
            "start": Object {
              "column": 6,
              "line": 7,
              "offset": 87,
            },
          },
          "title": null,
          "type": "link",
          "url": "http://example.com",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 42,
          "line": 7,
          "offset": 123,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 7,
          "offset": 82,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "@",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "baz baz",
                },
              ],
              "data": Object {
                "hName": "span",
                "hProperties": Object {
                  "class": "ping-username",
                },
              },
              "type": "emphasis",
            },
          ],
          "data": Object {
            "hName": "a",
            "hProperties": Object {
              "class": "ping ping-link",
              "href": "/membres/voir/baz baz/",
              "rel": "nofollow",
            },
          },
          "position": Position {
            "end": Object {
              "column": 13,
              "line": 9,
              "offset": 137,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 125,
            },
          },
          "type": "ping",
          "url": "/membres/voir/baz baz/",
          "username": "baz baz",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 13,
          "line": 9,
          "offset": 137,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 125,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 13,
      "line": 9,
      "offset": 137,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`fixture suite 1 compiles to Markdown: m1 1`] = `
"## Test ping @**I AM CLEM**

> > no metadata output @**I AM CLEM**
>
> no metadata output @**I AM CLEM**

ping @**I AM CLEM**

ping _@**I AM CLEM**_

> no metadata output @**I AM CLEM**
"
`;

exports[`fixture suite 1 parses: f1 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "indent": Array [],
            "start": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Test ping ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "@",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "I AM CLEM",
                },
              ],
              "data": Object {
                "hName": "span",
                "hProperties": Object {
                  "class": "ping-username",
                },
              },
              "type": "emphasis",
            },
          ],
          "data": Object {
            "hName": "a",
            "hProperties": Object {
              "class": "ping ping-link",
              "href": "/membres/voir/I AM CLEM/",
              "rel": "nofollow",
            },
          },
          "position": Position {
            "end": Object {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "indent": Array [],
            "start": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "type": "ping",
          "url": "/membres/voir/I AM CLEM/",
          "username": "I AM CLEM",
        },
      ],
      "depth": 2,
      "position": Position {
        "end": Object {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 24,
                      "line": 3,
                      "offset": 52,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 5,
                      "line": 3,
                      "offset": 33,
                    },
                  },
                  "type": "text",
                  "value": "no metadata output ",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "@",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "type": "text",
                          "value": "I AM CLEM",
                        },
                      ],
                      "data": Object {
                        "hName": "span",
                        "hProperties": Object {
                          "class": "ping-username",
                        },
                      },
                      "type": "emphasis",
                    },
                  ],
                  "data": Object {
                    "hName": "a",
                    "hProperties": Object {
                      "class": "ping ping-link",
                      "href": "/membres/voir/I AM CLEM/",
                      "rel": "nofollow",
                    },
                  },
                  "position": Position {
                    "end": Object {
                      "column": 38,
                      "line": 3,
                      "offset": 66,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 24,
                      "line": 3,
                      "offset": 52,
                    },
                  },
                  "type": "ping",
                  "url": "/membres/voir/I AM CLEM/",
                  "username": "I AM CLEM",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 3,
                  "offset": 66,
                },
                "indent": Array [],
                "start": Object {
                  "column": 5,
                  "line": 3,
                  "offset": 33,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 3,
              "offset": 66,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 3,
              "offset": 31,
            },
          },
          "type": "blockquote",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 22,
                  "line": 5,
                  "offset": 89,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 70,
                },
              },
              "type": "text",
              "value": "no metadata output ",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "@",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "I AM CLEM",
                    },
                  ],
                  "data": Object {
                    "hName": "span",
                    "hProperties": Object {
                      "class": "ping-username",
                    },
                  },
                  "type": "emphasis",
                },
              ],
              "data": Object {
                "hName": "a",
                "hProperties": Object {
                  "class": "ping ping-link",
                  "href": "/membres/voir/I AM CLEM/",
                  "rel": "nofollow",
                },
              },
              "position": Position {
                "end": Object {
                  "column": 36,
                  "line": 5,
                  "offset": 103,
                },
                "indent": Array [],
                "start": Object {
                  "column": 22,
                  "line": 5,
                  "offset": 89,
                },
              },
              "type": "ping",
              "url": "/membres/voir/I AM CLEM/",
              "username": "I AM CLEM",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 36,
              "line": 5,
              "offset": 103,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 5,
              "offset": 70,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 36,
          "line": 5,
          "offset": 103,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 29,
        },
      },
      "type": "blockquote",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 7,
              "offset": 110,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 105,
            },
          },
          "type": "text",
          "value": "ping ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "@",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "I AM CLEM",
                },
              ],
              "data": Object {
                "hName": "span",
                "hProperties": Object {
                  "class": "ping-username",
                },
              },
              "type": "emphasis",
            },
          ],
          "data": Object {
            "hName": "a",
            "hProperties": Object {
              "class": "ping ping-link",
              "href": "/membres/voir/I AM CLEM/",
              "rel": "nofollow",
            },
          },
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 7,
              "offset": 124,
            },
            "indent": Array [],
            "start": Object {
              "column": 6,
              "line": 7,
              "offset": 110,
            },
          },
          "type": "ping",
          "url": "/membres/voir/I AM CLEM/",
          "username": "I AM CLEM",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 7,
          "offset": 124,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 7,
          "offset": 105,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 9,
              "offset": 131,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 126,
            },
          },
          "type": "text",
          "value": "ping ",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "@",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "I AM CLEM",
                    },
                  ],
                  "data": Object {
                    "hName": "span",
                    "hProperties": Object {
                      "class": "ping-username",
                    },
                  },
                  "type": "emphasis",
                },
              ],
              "data": Object {
                "hName": "a",
                "hProperties": Object {
                  "class": "ping ping-link",
                  "href": "/membres/voir/I AM CLEM/",
                  "rel": "nofollow",
                },
              },
              "position": Position {
                "end": Object {
                  "column": 21,
                  "line": 9,
                  "offset": 146,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 9,
                  "offset": 132,
                },
              },
              "type": "ping",
              "url": "/membres/voir/I AM CLEM/",
              "username": "I AM CLEM",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 22,
              "line": 9,
              "offset": 147,
            },
            "indent": Array [],
            "start": Object {
              "column": 6,
              "line": 9,
              "offset": 131,
            },
          },
          "type": "emphasis",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 22,
          "line": 9,
          "offset": 147,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 126,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 22,
                  "line": 11,
                  "offset": 170,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 11,
                  "offset": 151,
                },
              },
              "type": "text",
              "value": "no metadata output ",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "@",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "I AM CLEM",
                    },
                  ],
                  "data": Object {
                    "hName": "span",
                    "hProperties": Object {
                      "class": "ping-username",
                    },
                  },
                  "type": "emphasis",
                },
              ],
              "data": Object {
                "hName": "a",
                "hProperties": Object {
                  "class": "ping ping-link",
                  "href": "/membres/voir/I AM CLEM/",
                  "rel": "nofollow",
                },
              },
              "position": Position {
                "end": Object {
                  "column": 36,
                  "line": 11,
                  "offset": 184,
                },
                "indent": Array [],
                "start": Object {
                  "column": 22,
                  "line": 11,
                  "offset": 170,
                },
              },
              "type": "ping",
              "url": "/membres/voir/I AM CLEM/",
              "username": "I AM CLEM",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 36,
              "line": 11,
              "offset": 184,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 11,
              "offset": 151,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 36,
          "line": 11,
          "offset": 184,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 11,
          "offset": 149,
        },
      },
      "type": "blockquote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 36,
      "line": 11,
      "offset": 184,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`fixture suite 2 compiles to Markdown: m2 1`] = `
"@foo @bar

@baz baz

> @**baz baz**
"
`;

exports[`fixture suite 2 parses: f2 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "@",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "foo",
                },
              ],
              "data": Object {
                "hName": "span",
                "hProperties": Object {
                  "class": "ping-username",
                },
              },
              "type": "emphasis",
            },
          ],
          "data": Object {
            "hName": "a",
            "hProperties": Object {
              "class": "ping ping-link",
              "href": "/membres/voir/foo/",
              "rel": "nofollow",
            },
          },
          "position": Position {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "ping",
          "url": "/membres/voir/foo/",
          "username": "foo",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "indent": Array [],
            "start": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "text",
          "value": " ",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "@",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "bar",
                },
              ],
              "data": Object {
                "hName": "span",
                "hProperties": Object {
                  "class": "ping-username",
                },
              },
              "type": "emphasis",
            },
          ],
          "data": Object {
            "hName": "a",
            "hProperties": Object {
              "class": "ping ping-link",
              "href": "/membres/voir/bar/",
              "rel": "nofollow",
            },
          },
          "position": Position {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "indent": Array [],
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "ping",
          "url": "/membres/voir/bar/",
          "username": "bar",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 3,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 11,
            },
          },
          "type": "text",
          "value": "@baz baz",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 9,
          "line": 3,
          "offset": 19,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 11,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "@",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "baz baz",
                    },
                  ],
                  "data": Object {
                    "hName": "span",
                    "hProperties": Object {
                      "class": "ping-username",
                    },
                  },
                  "type": "emphasis",
                },
              ],
              "data": Object {
                "hName": "a",
                "hProperties": Object {
                  "class": "ping ping-link",
                  "href": "/membres/voir/baz baz/",
                  "rel": "nofollow",
                },
              },
              "position": Position {
                "end": Object {
                  "column": 15,
                  "line": 5,
                  "offset": 35,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 23,
                },
              },
              "type": "ping",
              "url": "/membres/voir/baz baz/",
              "username": "baz baz",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 5,
              "offset": 35,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 5,
              "offset": 23,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 5,
          "offset": 35,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 21,
        },
      },
      "type": "blockquote",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 5,
      "offset": 35,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
